; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/platforms/powernv/extr_opal-fadump.c_opal_fadump_init_metadata.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/platforms/powernv/extr_opal-fadump.c_opal_fadump_init_metadata.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.opal_fadump_mem_struct = type { i64, i64, i64, i32 }

@OPAL_FADUMP_VERSION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.opal_fadump_mem_struct*)* @opal_fadump_init_metadata to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @opal_fadump_init_metadata(%struct.opal_fadump_mem_struct* %0) #0 {
  %2 = alloca %struct.opal_fadump_mem_struct*, align 8
  store %struct.opal_fadump_mem_struct* %0, %struct.opal_fadump_mem_struct** %2, align 8
  %3 = load i32, i32* @OPAL_FADUMP_VERSION, align 4
  %4 = load %struct.opal_fadump_mem_struct*, %struct.opal_fadump_mem_struct** %2, align 8
  %5 = getelementptr inbounds %struct.opal_fadump_mem_struct, %struct.opal_fadump_mem_struct* %4, i32 0, i32 3
  store i32 %3, i32* %5, align 8
  %6 = load %struct.opal_fadump_mem_struct*, %struct.opal_fadump_mem_struct** %2, align 8
  %7 = getelementptr inbounds %struct.opal_fadump_mem_struct, %struct.opal_fadump_mem_struct* %6, i32 0, i32 2
  store i64 0, i64* %7, align 8
  %8 = load %struct.opal_fadump_mem_struct*, %struct.opal_fadump_mem_struct** %2, align 8
  %9 = getelementptr inbounds %struct.opal_fadump_mem_struct, %struct.opal_fadump_mem_struct* %8, i32 0, i32 1
  store i64 0, i64* %9, align 8
  %10 = load %struct.opal_fadump_mem_struct*, %struct.opal_fadump_mem_struct** %2, align 8
  %11 = getelementptr inbounds %struct.opal_fadump_mem_struct, %struct.opal_fadump_mem_struct* %10, i32 0, i32 0
  store i64 0, i64* %11, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
